linked download buttons to github

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <nav class="navbar navbar-light navbar-expand navigation-clean" style="background: #0A84E2;">
-        <div class="container"><a class="navbar-brand" href="./index.html" style="color: #fff;">Post Me</a><a href="./pricing.html" style="color: #fff; text-decoration:none;">Pricing</a><button class="navbar-toggler" data-bs-toggle="collapse"></button><div id="navcol-1" class="collapse navbar-collapse"><a class="btn btn-primary ms-auto" role="button" href="#" style="background: #F56565;">Download</a></div></div>
+        <div class="container"><a class="navbar-brand" href="./index.html" style="color: #fff;">Post Me</a><a href="./pricing.html" style="color: #fff; text-decoration:none;">Pricing</a><button class="navbar-toggler" data-bs-toggle="collapse"></button><div id="navcol-1" class="collapse navbar-collapse"><a class="btn btn-primary ms-auto" role="button" href="https://github.com/HelixHEX/PostMe" style="background: #F56565;">Download</a></div></div>
     </nav>
     <header class="text-center text-white masthead">
         <div class="container">
@@ -24,7 +24,7 @@
                     <img style='width: 300px; height: 300px;' class="img-fluid" src='./assets/img/logo.jpg'>
                     <br>
                     <br>
-                    <h1 class="mb-5">Take "building in public"<br>to a whole new level</h1><button class="btn btn-primary btn-lg text-center" type="submit" style="background: #F56565;">Download Now!</button>
+                    <h1 class="mb-5">Take "building in public"<br>to a whole new level</h1><button class="btn btn-primary btn-lg text-center" type="submit" style="background: #F56565;" onclick="location.href='https://github.com/HelixHEX/PostMe'">Download Now!</button>
                 </div>
             </div>
         </div>
@@ -94,7 +94,7 @@
                 <div class="col-md-10 col-lg-8 col-xl-7 mx-auto position-relative">
                     <form>
                         <div class="row">
-                            <div class="col-12 col-md-3 mx-auto"><button class="btn btn-primary btn-lg" type="submit" style="background: #F56565;">Download</button></div>
+                            <div class="col-12 col-md-3 mx-auto"><button onclick="location.href='https://github.com/HelixHEX/PostMe'" class="btn btn-primary btn-lg" type="submit" style="background: #F56565;">Download</button></div>
                         </div>
                     </form>
                 </div>
