--- a/pricing.html
+++ b/pricing.html
@@ -16,7 +16,7 @@
 <body>
     <nav class="navbar navbar-light navbar-expand navigation-clean" style="background: #0A84E2;">
         <div class="container"><a class="navbar-brand" href="./index.html" style="color: #fff;">Post Me</a><a href="./pricing.html" style="color: #fff; text-decoration:none;">Pricing</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"></button>
-            <div class="collapse navbar-collapse" id="navcol-1"><a class="btn btn-primary ms-auto" role="button" href="#" style="background: #F56565;">Download</a></div>
+            <div class="collapse navbar-collapse" id="navcol-1"><a class="btn btn-primary ms-auto" role="button" href='https://github.com/HelixHEX/PostMe' style="background: #F56565;">Download</a></div>
         </div>
     </nav>
     <section class="text-center bg-light features-icons" style="background: #2C3436;"><link rel="stylesheet" href="https://cdn.lineicons.com/3.0/lineicons.css"> 
@@ -49,7 +49,7 @@
                 <p><i class="lni lni-checkmark-circle"></i>All Features</p>
                 <p><i class="lni lni-checkmark-circle"></i>No Hidden Fees</p>
               </div>
-              <div class="button"><a class="btn btn-success btn-2" href="#">Download Now</a></div>
+              <div class="button"><a class="btn btn-success btn-2" href="https://github.com/HelixHEX/PostMe">Download Now</a></div>
             </div>
           </div>
           <!-- Single Price Plan Area-->
@@ -98,7 +98,7 @@
                 <div class="col-md-10 col-lg-8 col-xl-7 mx-auto position-relative">
                     <form>
                         <div class="row">
-                            <div class="col-12 col-md-3 mx-auto"><button class="btn btn-primary btn-lg" type="submit" style="background: #F56565;">Download</button></div>
+                            <div class="col-12 col-md-3 mx-auto"><button onclick="location.href='https://github.com/HelixHEX/PostMe'" class="btn btn-primary btn-lg" type="submit" style="background: #F56565;">Download</button></div>
                         </div>
                     </form>
                 </div>
