--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <img style='width: 300px; height: 300px;' class="img-fluid" src='./assets/img/logo.jpg'>
                     <br>
                     <br>
-                    <h1 class="mb-5">Take "building in public"<br>to a whole new level</h1><button class="btn btn-primary btn-lg text-center" type="submit" style="background: #F56565;" onclick="location.href='https://github.com/HelixHEX/PostMe'">Download Now!</button>
+                    <h1 class="mb-5">Take "building in public"<br>to a whole new level</h1><a role="button" class="btn btn-primary btn-lg" style="background: #F56565;" href="https://github.com/HelixHEX/PostMe">Download Now!</a>
                 </div>
             </div>
         </div>
@@ -94,7 +94,7 @@
                 <div class="col-md-10 col-lg-8 col-xl-7 mx-auto position-relative">
                     <form>
                         <div class="row">
-                            <div class="col-12 col-md-3 mx-auto"><button onclick="location.href='https://github.com/HelixHEX/PostMe'" class="btn btn-primary btn-lg" type="submit" style="background: #F56565;">Download</button></div>
+                            <div class="col-12 col-md-3 mx-auto"><a role='button' href="https://github.com/HelixHEX/PostMe" class="btn btn-primary btn-lg" style="background: #F56565;">Download</a></div>
                         </div>
                     </form>
                 </div>
